=== 2013-02-07

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 385

=== 2013-01-17

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 374

=== 2012-12-25 / X-mas Edition

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 362

* Bugfixes:
  * Fix Japanese support in the installer. #139 #142 [mame]

=== 2012-11-09

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 327
  * Update mingwbuilds-32-4.7.2 to rev1
  * Retire build support for mingw64-32-4.6.3 DevKit
  * Add support for Ruby 2.0.0-preview1 (use NEWER option)

    rake ruby19 NEWER=1

* Bugfixes:
  * Disable Japanese support until changes to #139 are made

=== 2012-10-21

* Enhancements:
  * Upgraded Ruby 1.9.3 to patchlevel 286
  * Upgraded Ruby 1.8.7 to patchlevel 371
  * Retire build support for mingw-32-4.5.2 DevKit
  * Add MinGW-w64 v2.0.7 header/CRT update to mingw64-{34,64}-4.7.2
  * Add tdm-32-4.7.1 and tdm-64-4.7.1 support
  * Changed mingw64-32-4.7.2 to use i686-w64-mingw32-gcc-4.7.2-release-win32_rubenvb
  * Add 64bits GCC 4.7.2 from mingw-w64 project (rubenvb builds)
  * Added mingwbuilds-32-4.7.2 support
  * Convert gdbm recipe to use Knapsack binaries
  * Convert pdcurses recipe to use Knapsack binaries
  * Convert tcl and tk recipes to use Knapsack binaries

* Bugfixes:
  * Decreased file descriptors for 1.9.x to 2K. Closes #104 (again)
    Ruby associates a file descriptor to a socket, so can't use more than
    2048 FDs

* Internal:
  * Upgraded mingwrt for tdm-32-4.6.1 and mingw-32-4.6.2
  * Upgraded specific DevKit's to GDB version 7.5
  * Correct typo in rdoc_chm installation message.
  * Allow cleanup before make to satisfy CI environment.
    Usage:

    rake ruby19 CLEAN=1

=== 2012-06-29

* Enhancements:
  * Upgraded Ruby 1.8.7 to patchlevel 370
  * Add support for Japanese language installers.
  * Enhance Inno scripts to enable multi-language installers.
  * Upgraded documentation generator dependency (rdoc_chm) to 3.1.0. Closes #63